hphp/hack/test/pocket_universes/typing/tpu_access.bad.php.exp
File "tpu_access.bad.php", line 12, characters 35-47:
Unexpected Pocket Universes generic parameter A during typing. (Typing[4350])
